# pngenc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  readme.md
source/: CMakeLists.txt
source/java/: PngEnc.java
source/pngenc/: CMakeLists.txt  adler32.c  adler32.h  buffer.c  buffer.h  callback.c  callback.h  crc32.c  crc32.h  decoder.c  decoder.h  deflate.c  deflate.h  encoder.c  encoder.h  huffman.c  huffman.h  image_descriptor.c  image_descriptor.h  inflate.c  inflate.h  java.c  java.h  main.c  matcher.c  matcher.h  node.c  node.h  node_custom.h  node_data_gen.c  node_data_gen.h  node_deflate.c  node_deflate.h  node_idat.c  node_idat.h  png.c  png.h  png_pipeline.c  png_pipeline.h  pngenc.c  (+9 more)
source/system/: Log.cpp  Log.h  Timer.cpp  Timer.h  TimerLog.cpp  TimerLog.h  Util.h
source/tools/: CMakeLists.txt  timing_libpng.c  timing_libpng.cpp  timing_pngenc.c  timing_pngenc.cpp  zpipe.c
tests/: CMakeLists.txt  common.c  common.h  ctest-all.cmd  integration_pipeline.c  integration_read_png.c  integration_save_png.c  integration_save_png16.c  misc_circle.c  misc_matcher.c  misc_pow.c  perf_adler.c  perf_huffman.c  perf_mt.c  unit_adler.c  unit_crc.c  unit_deflate.c  unit_huffman.c  unit_inflate.c  unit_matcher.c  unit_pipeline.c  unit_pow.c  unit_push_bits.c  util_huff_tree.c
